[gd_scene load_steps=3 format=3 uid="uid://drn046xbx7cku"]

[ext_resource type="Script" uid="uid://qjsxqgxvq6s8" path="res://scripts/debug_hud.gd" id="1_ubd1e"]

[sub_resource type="LabelSettings" id="LabelSettings_darle"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ubd1e")

[node name="DistanceMoved" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -137.0
offset_top = 70.0
offset_right = 1.0
offset_bottom = 93.0
grow_horizontal = 0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "0.0
"
label_settings = SubResource("LabelSettings_darle")

[node name="POV_Label" type="Label" parent="DistanceMoved"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -269.0
offset_top = -36.0
offset_right = -146.0
offset_bottom = -13.0
grow_horizontal = 0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Position:"
label_settings = SubResource("LabelSettings_darle")
horizontal_alignment = 2

[node name="Position" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -137.0
offset_top = 35.0
offset_right = -14.0
offset_bottom = 58.0
grow_horizontal = 0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "0.0"
label_settings = SubResource("LabelSettings_darle")

[node name="DISTMOV_Label" type="Label" parent="Position"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -269.0
offset_top = 34.0
offset_right = -131.0
offset_bottom = 57.0
grow_horizontal = 0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Distance Moved:"
label_settings = SubResource("LabelSettings_darle")
horizontal_alignment = 2

[node name="Speed" type="Label" parent="."]
offset_left = 25.0
offset_top = 22.0
offset_right = 125.0
offset_bottom = 45.0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Speed:
"
label_settings = SubResource("LabelSettings_darle")

[node name="LinearVelocity" type="Label" parent="."]
offset_left = 25.0
offset_top = 57.0
offset_right = 143.0
offset_bottom = 80.0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Linear Velocity:
"
label_settings = SubResource("LabelSettings_darle")

[node name="FlightDirection" type="Label" parent="."]
offset_left = 26.0
offset_top = 97.0
offset_right = 144.0
offset_bottom = 120.0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Flight Direction:"
label_settings = SubResource("LabelSettings_darle")

[node name="Hovering" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -161.0
offset_right = 150.0
offset_bottom = -138.0
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Hovering:"
label_settings = SubResource("LabelSettings_darle")

[node name="GlideToggle" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -89.0
offset_right = 150.0
offset_bottom = -66.0
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Glide Toggle:"
label_settings = SubResource("LabelSettings_darle")

[node name="Stalling" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -125.0
offset_right = 148.0
offset_bottom = -102.0
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Is Stalling:"
label_settings = SubResource("LabelSettings_darle")

[node name="JumpStrength" type="Label" parent="."]
offset_left = 26.0
offset_top = 209.0
offset_right = 149.0
offset_bottom = 232.0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Jump Strength:"
label_settings = SubResource("LabelSettings_darle")

[node name="Afterburner" type="Label" parent="."]
offset_left = 26.0
offset_top = 178.0
offset_right = 149.0
offset_bottom = 201.0
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Afterburner:"
label_settings = SubResource("LabelSettings_darle")

[node name="Camera Scale" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.5
offset_top = 23.0
offset_right = 61.5
offset_bottom = 72.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Camera Scale
0"
label_settings = SubResource("LabelSettings_darle")
horizontal_alignment = 1

[node name="Update" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Update" to="." method="_on_update_timeout"]
